[project]
name = "content-safety"
version = "0.1.0"
description = "Content safety MVP backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.0",
    "httpx[socks]>=0.28.1",
    "langchain>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pygraphviz>=1.14",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[project.scripts]
content-safety-api = "content_safety.main:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
